@@ -1,3 +1,7 @@
+2012-01-02 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFCharacterSet.c: Added most functions.
+
 2012-01-01 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/GNUmakefile:
